project('builder', 'd', meson_version : '>=0.48.0')

executable('packview',
    'packview.d',
    'packview/url.d',
    'packview/findprog.d',
    'packview/file.d',
    'packview/async.d',
    'packview/proc.d',
    'packview/globals.d',
    'packview/apt.d',
    'packview/manager.d',
    install : true)
